[gd_scene load_steps=3 format=3 uid="uid://egfbhkmovehu"]

[ext_resource type="Texture2D" uid="uid://b81el12aqfowg" path="res://icon.svg" id="1_3pl6d"]
[ext_resource type="Script" path="res://scenes/friends/friend_card.gd" id="1_mgr7i"]

[node name="FriendCard" type="Panel"]
offset_right = 770.0
offset_bottom = 265.0
mouse_filter = 2
script = ExtResource("1_mgr7i")

[node name="Avartar" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -92.5
offset_right = 208.0
offset_bottom = 91.5
grow_vertical = 2
texture = ExtResource("1_3pl6d")

[node name="Name" type="Button" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 40.0
offset_right = 744.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 40
text = "Jirawat Charoonnet"

[node name="GotoFarm" type="Button" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 128.0
offset_right = 744.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 40
text = "ดูฟาร์ม"

[node name="AddFriend" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 128.0
offset_right = 544.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 40
text = "เพิ่มเพื่อน"

[connection signal="pressed" from="GotoFarm" to="." method="_on_goto_farm_pressed"]
[connection signal="pressed" from="AddFriend" to="." method="_on_add_friend_pressed"]
